swagger user routes
